<resources>
    <string name="app_name">SMSgateway</string>
    <string name="connection_error">Připojení k serveru nelze navázat</string>
    <string name="connection_error_image">Connection Error Image</string>
    <string name="connected">Připojeno k serveru</string>
    <string name="pref_device_id">UNIQUE_DEVICE_ID</string>
    <string name="pref_secret_key">SECRET_KEY</string>
    <string name="session_token">SESSION_TOKEN</string>
    <string name="icon">icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connecting_to_server">Připojování k serveru</string>
    <string name="retry">Zkusit znovu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>