<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CantConnectFragment"
    android:background="@color/background_red">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/ic_error_outline"
            tools:ignore="MissingConstraints"
            app:tint="@color/error_red"
            android:contentDescription="@string/connection_error_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error"
            android:gravity="center"
            android:textColor="@color/error_red"
            android:textStyle="bold"
            android:layout_marginHorizontal="40pt"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/retry"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingHorizontal="16dp"/>
    </LinearLayout>

</FrameLayout>