<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment"
    android:background="@color/background_green">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/background_green"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:title="@string/app_name"
            app:scrimAnimationDuration="250">

            <LinearLayout
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:id="@+id/connected"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="54dp"
                    android:src="@drawable/ic_check_circle"
                    tools:ignore="MissingConstraints"
                    app:tint="@color/success_green"
                    android:contentDescription="@string/connection_error_image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    android:gravity="center"
                    android:textColor="@color/success_green"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="40pt"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/connection_id"
                    android:gravity="center"
                    android:textColor="@color/success_green"
                    android:textSize="11sp"/>
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/messages_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"/>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>